--- a/TwitterClone/Base.lproj/Main.storyboard
+++ b/TwitterClone/Base.lproj/Main.storyboard
@@ -76,9 +76,6 @@
                                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                             </state>
                                             <state key="selected" image="retweet_on"/>
-                                            <connections>
-                                                <action selector="retweet:" destination="Ah7-4n-0Wa" eventType="touchUpInside" id="iWK-in-VKr"/>
-                                            </connections>
                                         </button>
                                         <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CtC-b6-vD3">
                                             <rect key="frame" x="134" y="59" width="42" height="32"/>
@@ -87,15 +84,15 @@
                                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                             </state>
                                             <state key="selected" image="favorite_on"/>
-                                            <connections>
-                                                <action selector="favorite:" destination="Ah7-4n-0Wa" eventType="touchUpInside" id="ngw-Xt-aOd"/>
-                                            </connections>
                                         </button>
                                     </subviews>
                                 </tableViewCellContentView>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <connections>
+                                    <outlet property="favoriteButton" destination="CtC-b6-vD3" id="ZUq-h0-fxZ"/>
                                     <outlet property="nameLabel" destination="FVJ-Vq-xC1" id="scR-6M-uK0"/>
+                                    <outlet property="replyButton" destination="MRT-qM-YEM" id="ohO-Iq-VVg"/>
+                                    <outlet property="retweetButton" destination="Lxc-6g-qH0" id="41l-Xi-5mG"/>
                                     <outlet property="tweetImage" destination="FcA-yX-Mcg" id="aUu-t2-k4Y"/>
                                     <outlet property="tweetLabel" destination="u3f-uJ-98P" id="9Y0-iE-ZvI"/>
                                     <outlet property="userImage" destination="fSi-aQ-jYT" id="Og8-Ix-ZjD"/>
@@ -390,6 +387,6 @@
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="bCw-Yb-SMB"/>
+        <segue reference="EnC-Cc-it7"/>
     </inferredMetricsTieBreakers>
 </document>
