--- a/TwitterClone/Base.lproj/Main.storyboard
+++ b/TwitterClone/Base.lproj/Main.storyboard
@@ -68,6 +68,9 @@
                                             <state key="normal" image="reply">
                                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                             </state>
+                                            <connections>
+                                                <segue destination="yka-VW-zUf" kind="modal" identifier="showComposeWithReply" id="Q5R-cP-Kdq"/>
+                                            </connections>
                                         </button>
                                         <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Lxc-6g-qH0">
                                             <rect key="frame" x="92" y="59" width="42" height="32"/>
@@ -91,7 +94,6 @@
                                 <connections>
                                     <outlet property="favoriteButton" destination="CtC-b6-vD3" id="ZUq-h0-fxZ"/>
                                     <outlet property="nameLabel" destination="FVJ-Vq-xC1" id="scR-6M-uK0"/>
-                                    <outlet property="replyButton" destination="MRT-qM-YEM" id="ohO-Iq-VVg"/>
                                     <outlet property="retweetButton" destination="Lxc-6g-qH0" id="41l-Xi-5mG"/>
                                     <outlet property="tweetImage" destination="FcA-yX-Mcg" id="aUu-t2-k4Y"/>
                                     <outlet property="tweetLabel" destination="u3f-uJ-98P" id="9Y0-iE-ZvI"/>
@@ -387,6 +389,6 @@
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="EnC-Cc-it7"/>
+        <segue reference="Q5R-cP-Kdq"/>
     </inferredMetricsTieBreakers>
 </document>
